2018-08-02 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-va-arg-5.c:
	  Disable a test for older GCC.
	* support/regression/ports/uc*/spec.mk:
	  Harmonize simulation timeouts for z80-related.

2018-08-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def,
	  support/regression/tests/compare.c:
	  Improve range checks on 8- and 16-bit variables.
	* support/regression/tests/gcc-torture-execute-vrp-7.c:
	  Disable test which fails for z80-related for tlcs90, also.

2018-07-31 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc.c,
	  src/stm8/gen.c:
	  Improve shift of global variables by 1.

2018-07-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCval.c,
	  support/regression/tests/gcc-torture-execute-wchar_t-1.c,
	  Fix bug #2792.

2018-07-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCglue.c,
	  support/regression/tests/gcc-torture-execute-wchar_t-1.c,
	  support/regression/tests/gcc-torture-execute-widechar-2.c:
	  Fix bug #2791.

2018-07-30 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-*.c:
	  Add tests from GCC 8.2.

2018-07-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.?:
	  Fix typos.
	  support/regression/tests/gcc-torture-execute-*.c:
	  Disable some warnings.

2018-07-26 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pic14/glue.c:
	  Fix an issue introduced with support for C99 intermingling of declarations and statements.

2018-07-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.cc,
	  src/SDCClospre.hpp:
	  Fix bug #2673.

2018-07-13 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/z80/peep.c,
	  support/regression/tests/bug-2771.c:
	  Fix bug #2771.
	* src/SDCClospre.cc:
	  Improve lospre debug output.

2018-07-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-2770.c:
	  Fix bug #2770.
	* device/include/mcs51/ax8052.h,