@@ -35,7 +35,7 @@
 
 #if defined(__SDCC_hc08) || defined(__SDCC_s08) || defined(__SDCC_stm8) // Big-endian
 
-long long _rrslonglong(long long l, signed char s)
+long long _rrslonglong(long long l, char s)
 {
 	int32_t *top = (uint32_t *)((char *)(&l) + 0);
 	uint32_t *middle = (uint16_t *)((char *)(&l) + 2);
@@ -59,7 +59,7 @@ long long _rrslonglong(long long l, signed char s)
 
 #else // Little-endian
 
-long long _rrslonglong(long long l, signed char s)
+long long _rrslonglong(long long l, char s)
 {
 	int32_t *top = (uint32_t *)((char *)(&l) + 4);
 	uint16_t *middle = (uint16_t *)((char *)(&l) + 3);
