@@ -35,7 +35,7 @@
 
 #if defined(__SDCC_hc08) || defined(__SDCC_s08) || defined(__SDCC_stm8) // Big-endian
 
-unsigned long long _rrulonglong(unsigned long long l, signed char s)
+unsigned long long _rrulonglong(unsigned long long l, char s)
 {
 	uint32_t *const top = (uint32_t *)((char *)(&l) + 0);
 	uint32_t *const middle = (uint16_t *)((char *)(&l) + 2);
@@ -59,7 +59,7 @@ unsigned long long _rrulonglong(unsigned long long l, signed char s)
 
 #else // Little-endian
 
-unsigned long long _rrulonglong(unsigned long long l, signed char s)
+unsigned long long _rrulonglong(unsigned long long l, char s)
 {
 	uint32_t *const top = (uint32_t *)((char *)(&l) + 4);
 	uint16_t *const middle = (uint16_t *)((char *)(&l) + 3);
